# ChangeLog for app-laptop/hdapsd
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header:

*hdapsd-20081005 (24 Jan 2009)
  24 Jan 2009; Robert A <r_a@lavabit.com> +51-hdaps.rules:
  add missing udev rule

*hdapsd-20081005 (21 Jan 2009)
  21 Jan 2009; Robert A <r_a@lavabit.com> +hdapsd-20081005.ebuild:
  version bump
  21 Jan 2009; Robert A <r_a@lavabit.com> hdapsd.init:
  update for kernel >= 2.6.28

*hdapsd-20060409-r3 (20 Oct 2008)

  20 Oct 2008; <welp@gentoo.org> files/hdapsd.init,
  -hdapsd-20060409-r2.ebuild, +hdapsd-20060409-r3.ebuild:
  Fix typo in initscript; Bug 196052

*hdapsd-20060409-r2 (30 Mar 2008)

  30 Mar 2008; Peter Weller <welp@gentoo.org> +hdapsd-20060409-r2.ebuild:
  Bump; bug 141565

*hdapsd-20060409-r1.ebuild (29 Aug 2007)
*hdapsd-20060409.ebuild (29 Aug 2007)

  29 Aug 2007; Stefan Schweizer <genstef@gentoo.org> hdapsd-20060409.ebuild,
  hdapsd-20060409-r1.ebuild:
  Fix config checks, thanks jieryn <jieryn@gmail.com> in bug 190047

  23 Jan 2007; Marius Mauch <genone@gentoo.org> hdapsd-20060409.ebuild,
  hdapsd-20060409-r1.ebuild:
  Replacing einfo with elog

*hdapsd-20060409-r1 (05 Dec 2006)

  05 Dec 2006; Roy Marples <uberlord@gentoo.org> files/hdapsd.init,
  +hdapsd-20060409-r1.ebuild:
  Bump for a new patchset, works on 2.6.18 and 2.6.19 kernels.
  Fixes #142376 and #148423

  28 Jun 2006; Roy Marples <uberlord@gentoo.org> hdapsd-20060409.ebuild:
  Remove syslog stuff as it was invalid for scsi/sata systems.
  Detect patched kernel via /sys in pkg_postinst as kernel sources may not be
  installed and the warning may be in error.

  27 Jun 2006; Roy Marples <uberlord@gentoo.org> +files/hdaps-Z60m.patch,
  hdapsd-20060409.ebuild:
  Added a kernel patch so --config can enable hdaps on my Z60m

*hdapsd-20060409 (26 Jun 2006)

  26 Jun 2006; Roy Marples <uberlord@gentoo.org> +files/hdapsd.conf,
  +files/hdapsd.init, +metadata.xml, +hdapsd-20060409.ebuild: