@@ -10,6 +10,6 @@ DIST hdapsd-20081005.c.bz2 6935 RMD160 d733b7bae4bc359cb1aabc390a2d44094bbc0dfd 
 EBUILD hdapsd-20060409-r1.ebuild 2337 RMD160 57a84e5ae4a52e5a16b93d150e72e16a2b32d527 SHA1 887efe8ff8fc621b78b03411da046289b2350d3c SHA256 c8f46876dea82c1949afde90b75168929883e23cd8e6ebc8a2736e05e66d66de
 EBUILD hdapsd-20060409-r3.ebuild 2776 RMD160 0c0f74ab59dcd654eb5edff4a4de3efbca7f784c SHA1 564e976509ce25fad9aa4a16ea76f3a1d85a3ad1 SHA256 5533e2e0432707e0c0dd6f4eab6b6aaba8e7ddddfe5e9b0f8a4dbc1062c4b390
 EBUILD hdapsd-20060409.ebuild 2331 RMD160 fa88c5443c1a70529aa8864492ff204164f77843 SHA1 202aace98040253e0acbafe2949b58532888f73a SHA256 87169b8630e5b0fac52eea0096086cae1c6e820b41428971da9c4ec3d2d0a184
-EBUILD hdapsd-20081005.ebuild 1720 RMD160 a5b85b17b5f5fa3ceb091c5f285153f60e329681 SHA1 8fe74ef0de01cff4be55c3fcb75e590888db38d2 SHA256 7a91d7b821ede1e67f6d46e435f0edf210b82405d157525bf5cc13bf6d1f2b12
-MISC ChangeLog 2018 RMD160 c35d406ca42fab201210f94588d8bde7561660d1 SHA1 9d96dca23298f1b0f6e4cddabf0728f2fa2f2114 SHA256 ef5cc9292f4688a8359a480291065679e057a0b979abb1eba5e7bded2b9109a7
+EBUILD hdapsd-20081005.ebuild 1686 RMD160 f92a13b4cd2455d2d3cbcefe6959c168ef09dcaa SHA1 36caf429d5e96f6a60fc41e84c06de4818ac86b9 SHA256 3423782958d945530a477600f0832b79de85eb9d01cf69353df9585508e0ee6c
+MISC ChangeLog 2192 RMD160 d25c5f9adb4424d0e4a029c26b31f971880d0223 SHA1 dcf2ff5b4fecc2a0c751af979c0f5ff065750b40 SHA256 fdd7a4d72bc04a7bc2a27538fee3569ac000f3673c1cbe4e4a823a6e748a8ad8
 MISC metadata.xml 263 RMD160 97c8ad544063bcbdf65190404934923e0a42d562 SHA1 6e276e4277eeae8ee686d0c858761aa63bf71e0b SHA256 0d5fcdbefefdc4a8d5d703b5a01a74e1bcf181cb3bd29fd82e202221795e51c2
