@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header:
 
+*hdapsd-20081005 (25 Jan 2009)
+  25 Jan 2009; Robert A <r_a@lavabit.com> hdapsd-20081005.ebuild:
+  strict app-laptop/tp_smapi dependency removed (thanks to Phillip Michael)
+
 *hdapsd-20081005 (24 Jan 2009)
   24 Jan 2009; Robert A <r_a@lavabit.com> +51-hdaps.rules:
   add missing udev rule
